<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/ll_container_dialog_activity"
              android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:transitionName="@string/transition_dialog"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="10dp"
        card_view:contentPadding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/start_date_time_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MaterialDialogTheme.TextAppearanceDialogError"
                app:theme="@style/MaterialDialogTheme.TextAppearanceDialog">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_start_time"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/end_date_time_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MaterialDialogTheme.TextAppearanceDialogError"
                app:theme="@style/MaterialDialogTheme.TextAppearanceDialog">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_end_time"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_select_equipment_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ms_alignLabels="true"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/black"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/select_alarm_level"
                app:ms_highlightColor="@color/white"
                app:ms_hint="@string/all"
                app:ms_hintColor="@color/black"
                app:ms_multiline="true" />


            <RadioGroup
                android:id="@+id/rg_handle_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_all_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/all" />

                <RadioButton
                    android:id="@+id/rb_not_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pending_treat" />

                <RadioButton
                    android:id="@+id/rb_handled_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/treated" />
            </RadioGroup>

            <com.dd.CircularProgressButton
                android:id="@+id/bt_search_dialog"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/cpb_white"
                android:textSize="15sp"
                app:cpb_cornerRadius="20dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_textIdle="@string/select" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>