<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <!-- 折线图 -->

        <RelativeLayout
            android:id="@+id/chartviewRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.8" >

            <TextView
                android:id="@+id/shengchan_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/shengchan_title"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <com.shtoone.liqing.widget.ui.ChartView
                android:id="@+id/shenchang_chartview"
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_below="@id/shengchan_title"
                />

            <LinearLayout
                android:id="@+id/shengchan_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shenchang_chartview"
                android:orientation="horizontal" >
            </LinearLayout>
        </RelativeLayout>

        <!-- 仪表盘 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <!-- 骨料温度 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/shengchan_guliaowendu"
                    android:textColor="@color/white" />

                <com.shtoone.liqing.widget.ui.DashBoardView
                    android:id="@+id/shengchan_guliaowendu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!-- 沥青温度 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/shengchan_liqingwendu"
                    android:textColor="@color/white" />

                <com.shtoone.liqing.widget.ui.DashBoardView
                    android:id="@+id/shengchan_liqingwendu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- 出料温度 -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/shengchan_chuliaowendu"
                    android:textColor="@color/white" />

                <com.shtoone.liqing.widget.ui.DashBoardView
                    android:id="@+id/shengchan_chuliaowendu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/colors_for_shengchanjiankong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <!-- 柱状图 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/time_for_shengchanjiankong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:gravity="left"
                    android:layout_weight="1.5"
                    android:text="@string/shengchan_peibijiankong"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="实际值"
                    android:textColor="@color/white"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="理论值"
                    android:textColor="@color/white"
                    android:textSize="10dp" />
            </LinearLayout>

            <com.shtoone.liqing.widget.ui.StatscsView
                android:id="@+id/shengchan_StatscsView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="9" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <include layout="@layout/floatingactionbutton" />

</FrameLayout>